stretched the video for now...need to fix sizing so it doesnt look weird

--- a/format.css
+++ b/format.css
@@ -30,8 +30,8 @@ body {
     padding:0;
 }
 .navButton{
-    background-color: white;
-    color: black;
+    background-color: transparent;
+    color: white;
     border: 2px solid #dadfe1;
     padding: 15px 32px;
     text-align: center;
@@ -46,7 +46,7 @@ body {
     color: #dadfe1;
     transition: all .3s linear;
     border: 2px solid transparent;
-    
+
 }
 #hero{
     display:inline-block;
@@ -54,20 +54,19 @@ body {
     width: 100%;
     max-height: 50%;
     padding: 0;
-    
 }
 #heroVideo {
     right: 0;
     bottom: 0;
-    width: 100%; 
-    height: 100%;
+    width: 100%;
+    height: 500px;
+    object-fit: fill;
 }
 .videoContent {
     position: absolute;
     top:0;
     color: #f1f1f1;
     padding: 20px;
-    margin-top: 50;
     float: left;
     margin-left: 10%;
 }
@@ -76,7 +75,7 @@ body {
     vertical-align: top;
     width: 100%;
     background-color: #dadfe1;
-    min-height:500px; 
+    min-height:500px;
 }
 #tutorials{
   display:inline-block;
@@ -85,4 +84,25 @@ body {
   background-color: #343F4A;
     min-height:500px;
 
+}
+
+.tint
+{
+  position: relative;
+}
+.tint:after
+{
+	content: "";
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: rgba(0,0,0, 0.6);
+	transition: all .3s linear;
+}
+
+.tint h1, .tint h3, .tint button{
+  position: relative;
+	z-index: 1000000;
 }
